--- a/app/templates/bossTeam.html
+++ b/app/templates/bossTeam.html
@@ -6,7 +6,7 @@
     <div class="col-lg-12">
       <h1 class="display-4">Boss Teams</h1>
       <hr>
-      <p class="instructions">These are your optimal teams for damage for each boss and mini</p>
+      <p class="instructions">These are your optimal teams for damage for each boss and mini {{ testList }}</p>
       <hr>
     </div>
  </div>
@@ -39,6 +39,17 @@
                 <td>{{ heroes[10].raidCrit(user.artCrit())}}</td>
                 <td>{{ heroes[10].critDmg() }}</td>
                 <td>{{ heroes[10].raidCritDmg(user.artCritDmg("Dark"), 0)}}</td>
+            </tr>
+            <tr>
+                <td>{{ heroes[4].baseStats.name}}</td>
+                <td>{{ heroes[4].atk()}}</td>
+                <td>{{ heroes[4].raidAtk(user.artAtk("Dark"), 0)}}</td>
+                <td>{{ heroes[4].aps() }}</td>
+                <td>{{ heroes[4].raidAps(user.artAps(), 0)}}</td>
+                <td>{{ heroes[4].crit() }}</td>
+                <td>{{ heroes[4].raidCrit(user.artCrit())}}</td>
+                <td>{{ heroes[4].critDmg() }}</td>
+                <td>{{ heroes[4].raidCritDmg(user.artCritDmg("Dark"), 0)}}</td>
             </tr>
             <tr>
                 <td>{{ heroes[8].baseStats.name}}</td>
@@ -78,11 +89,15 @@
                 <th>DPS</th>
             </tr>
             </thead>
-            {% for key, value in user.raidteam(heroes, undeadsam).items() %}
+            {% for key, value in user.raidteam(heroes, undeadsam)[0].items() %}
             <tr>
                 <td>{{ key }}</td><td>{{ value }}</td>
             </tr>
             {% endfor %}
+            <tr>
+                <td>{{ user.raidteam(heroes, undeadsam)[1] }}</td>
+                <td>{{ user.raidteam(heroes, undeadsam)[2] }}(total: {{ user.raidteam(heroes, undeadsam)[3] }})</td>
+            </tr>
         </table>
 
     </div>
@@ -118,7 +133,7 @@
                 <th>DPS</th>
             </tr>
             </thead>
-            {% for key, value in user.raidteam(heroes, fw).items() %}
+            {% for key, value in user.raidteam(heroes, fw)[0].items() %}
             <tr>
                 <td>{{ key }}</td><td>{{ value }}</td>
             </tr>
