--- a/app/templates/bossTeam.html
+++ b/app/templates/bossTeam.html
@@ -6,7 +6,7 @@
     <div class="col-lg-12">
       <h1 class="display-4">Boss Teams</h1>
       <hr>
-      <p class="instructions">These are your optimal teams for damage for each boss and mini {{ testList }}</p>
+      <p class="instructions">These are your optimal teams for damage for each boss and mini</p>
       <hr>
     </div>
  </div>
@@ -20,155 +20,31 @@
                 <th>Name</th>
                 <th>Attack</th>
                 <th>Raid Attack</th>
-                <th>APS</th>
+
                 <th>Raid APS</th>
-                <th>Crit</th>
+
                 <th>Raid Crit</th>
-                <th>Crit DMG</th>
+
                 <th>Raid Crit DMG</th>
             </tr>
             </thead>
 <tr>
                 <td>{{ heroes[0].baseStats.name}}</td>
                 <td>{{ heroes[0].atk()}}</td>
-                <td>{{ heroes[0].raidAtk(user.artAtk("Light"), 0)}}</td>
-                <td>{{ heroes[0].aps() }}</td>
-                <td>{{ heroes[0].raidAps(user.artAps(), 0)}}</td>
-                <td>{{ heroes[0].crit() }}</td>
+                <td>{{ heroes[0].raidAtk(user.artAtk(heroes[0].baseStats.element), 0)}}</td>
+
+                <td>{{ heroes[0].raidAps(user.artAps(), 20)}}</td>
+
                 <td>{{ heroes[0].raidCrit(user.artCrit())}}</td>
-                <td>{{ heroes[0].critDmg() }}</td>
-                <td>{{ heroes[0].raidCritDmg(user.artCritDmg("Light"), 0)}}</td>
+
+                <td>{{ heroes[0].raidCritDmg(user.artCritDmg(heroes[0].baseStats.element), 0)}}</td>
             </tr>
-            <tr>
-                <td>{{ heroes[10].baseStats.name}}</td>
-                <td>{{ heroes[10].atk()}}</td>
-                <td>{{ heroes[10].raidAtk(user.artAtk("Dark"), 0)}}</td>
-                <td>{{ heroes[10].aps() }}</td>
-                <td>{{ heroes[10].raidAps(user.artAps(), 0)}}</td>
-                <td>{{ heroes[10].crit() }}</td>
-                <td>{{ heroes[10].raidCrit(user.artCrit())}}</td>
-                <td>{{ heroes[10].critDmg() }}</td>
-                <td>{{ heroes[10].raidCritDmg(user.artCritDmg("Dark"), 0)}}</td>
-            </tr>
-            <tr>
-                <td>{{ heroes[4].baseStats.name}} {{ heroes[4].baseStats.id}}</td>
-                <td>{{ heroes[4].atk()}}</td>
-                <td>{{ heroes[4].raidAtk(user.artAtk("Earth"), 0)}}</td>
-                <td>{{ heroes[4].aps() }}</td>
-                <td>{{ heroes[4].raidAps(user.artAps(), 0)}}</td>
-                <td>{{ heroes[4].crit() }}</td>
-                <td>{{ heroes[4].raidCrit(user.artCrit())}}</td>
-                <td>{{ heroes[4].critDmg() }}</td>
-                <td>{{ heroes[4].raidCritDmg(user.artCritDmg("Earth"), 0)}}</td>
-            </tr>
-            <tr>
-                <td>{{ heroes[8].baseStats.name}}</td>
-                <td>{{ heroes[8].atk()}}</td>
-                <td>{{ heroes[8].raidAtk(user.artAtk("Fire"), 0)}}</td>
-                <td>{{ heroes[8].aps() }}</td>
-                <td>{{ heroes[8].raidAps(user.artAps(), 0)}}</td>
-                <td>{{ heroes[8].crit() }}</td>
-                <td>{{ heroes[8].raidCrit(user.artCrit())}}</td>
-                <td>{{ heroes[8].critDmg() }}</td>
-                <td>{{ heroes[8].raidCritDmg(user.artCritDmg("Fire"), 0)}}</td>
-            </tr>
+
+
 
         </table>
     </div>
 
  </div>
 
-<div class="row pt-3">
-    <div class="col-lg-12">
-      <h1 class="display-4">Buff test</h1>
-      <hr>
-      {{ user.raidbuffs(heroes, "Fire") }}
-      <hr>
-    </div>
- </div>
-
-<div class="row pt-3">
-    <div class="col-lg-6">
-        <table class="table">
-            <thead class="thead-dark">
-            <tr>
-                <th colspan="2" class="text-center">Undead Sam incl. Weakness and Elemental Advantage</th>
-            </tr>
-            <tr>
-                <th>Hero</th>
-                <th>DPS</th>
-            </tr>
-            </thead>
-            {% for key, value in user.raidteam(heroes, undeadsam)[0].items() %}
-            <tr>
-                <td>{{ key }}</td><td>{{ value }}</td>
-            </tr>
-            {% endfor %}
-            <tr>
-                <td>{{ user.raidteam(heroes, undeadsam)[1] }}</td>
-                <td>{{ user.raidteam(heroes, undeadsam)[2] }}(total: {{ user.raidteam(heroes, undeadsam)[3] }})</td>
-            </tr>
-        </table>
-
-    </div>
-
-    <div class="col-lg-6">
-        <table class="table">
-            <thead class="thead-dark">
-            <tr>
-                <th colspan="2" class="text-center">Undead Sam excl. Weakness and Elemental Advantage</th>
-            </tr>
-            <tr>
-                <th>Hero</th>
-                <th>DPS</th>
-            </tr>
-            </thead>
-            {% for key, value in user.raidteam2(heroes, undeadsam).items() %}
-            <tr>
-                <td>{{ key }}</td><td>{{ value }}</td>
-            </tr>
-            {% endfor %}
-        </table>
-    </div>
- </div>
-<div class="row pt-3">
-    <div class="col-lg-6">
-        <table class="table">
-            <thead class="thead-dark">
-            <tr>
-                <th colspan="2" class="text-center">Frostwing incl. Weakness and Elemental Advantage</th>
-            </tr>
-            <tr>
-                <th>Hero</th>
-                <th>DPS</th>
-            </tr>
-            </thead>
-            {% for key, value in user.raidteam(heroes, fw)[0].items() %}
-            <tr>
-                <td>{{ key }}</td><td>{{ value }}</td>
-            </tr>
-            {% endfor %}
-        </table>
-
-    </div>
-
-    <div class="col-lg-6">
-        <table class="table">
-            <thead class="thead-dark">
-            <tr>
-                <th colspan="2" class="text-center">Frostwing excl. Weakness and Elemental Advantage</th>
-            </tr>
-            <tr>
-                <th>Hero</th>
-                <th>DPS</th>
-            </tr>
-            </thead>
-            {% for key, value in user.raidteam2(heroes, fw).items() %}
-            <tr>
-                <td>{{ key }}</td><td>{{ value }}</td>
-            </tr>
-            {% endfor %}
-        </table>
-    </div>
- </div>
 {% endblock %}
