--- a/app/templates/hero.html
+++ b/app/templates/hero.html
@@ -51,7 +51,8 @@
                 {% else %}
                 -
                 {% endif %}
-            </h1></td>
+            </h1>
+            {{ selectedHero.raidAtk(user[0].artAtk(selectedHero.baseStats.element), 0)}}</td>
         </tr>
     </table>
       </div>
