--- a/app/static/style.css
+++ b/app/static/style.css
@@ -6,6 +6,10 @@
     padding: 8px;
 }
 
+.AllRare {
+    background-color: #dddddd;
+}
+
 .WaterCommon {
     background-color: #CFE2F3;
     padding: 8px;
