--- a/app/templates/test.html
+++ b/app/templates/test.html
@@ -11,135 +11,39 @@
     </div>
  </div>
 
-   <!-- WATER HEROES -->
-  <div class="row">
-      <div class="col-lg-4 pt-3">
-      <table class="table table-borderless table-sm" cellpadding="0" cellspacing="0">
-        <thead>
-        <tr class="WaterHead shadow">
-          <th class="text-center align-middle"><img src="{{ url_for('static', filename='water.png') }}" width="40" alt="Water"></th>
+<div class="row pt-3">
+    <div class="col-lg-12">
+        <table class="table">
+            <thead class="thead-dark">
 
-          <th class="text-center align-middle"><img src="{{ url_for('static', filename='star.png') }}" width="25" alt="Star Level"></th>
-          <th class="text-center align-middle"><img src="{{ url_for('static', filename='awaken.png') }}" width="25" alt="Awaken"></th>
-          <th class="text-center align-middle">WPN</th>
-          <th class="text-center align-middle"><img src="{{ url_for('static', filename='medal.png') }}" width="25" alt="Medals"></th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for i in heroes|sort(attribute='baseStats.name') %}
-        {% if i.baseStats.element == "Water" and i.baseStats.rarity == "Common" %}
+            <tr>
+                <th>Name</th>
+                <th>Attack</th>
+                <th>Raid Attack</th>
 
-        <!-- WATER COMMON -->
-        {% include '_heroSetup2.html' %}
+                <th>Raid APS</th>
 
-        {% endif %}
-        {% endfor %}
-        {% for i in heroes|sort(attribute='baseStats.name') %}
-        {% if i.baseStats.element == "Water" and i.baseStats.rarity == "Rare" %}
+                <th>Raid Crit</th>
 
-        <!-- WATER RARE -->
-        {% include '_heroSetup2.html' %}
+                <th>Raid Crit DMG</th>
+            </tr>
+            </thead>
+<tr>
+                <td>{{ heroes[0].baseStats.name}}</td>
+                <td>{{ heroes[0].atk()}}</td>
+                <td>{{ heroes[0].raidAtk(user.artAtk(heroes[0].baseStats.element), 800)}}</td>
 
-        {% endif %}
-        {% endfor %}
-        {% for i in heroes|sort(attribute='baseStats.name') %}
-        {% if i.baseStats.element == "Water" and i.baseStats.rarity == "Epic" %}
+                <td>{{ heroes[0].raidAps(user.artAps(), 0)}}</td>
 
-        <!-- WATER EPIC -->
-        {% include '_heroSetup2.html' %}
+                <td>{{ heroes[0].raidCrit(user.artCrit())}}</td>
 
-        {% endif %}
-        {% endfor %}
+                <td>{{ heroes[0].raidCritDmg(user.artCritDmg(heroes[0].baseStats.element), 0)}}</td>
+            </tr>
 
-        </tbody>
-      </table>
+
+
+        </table>
     </div>
 
-<!-- FIRE HEROES -->
-           <div class="col-lg-4 pt-3">
-      <table class="table table-borderless table-sm" cellpadding="0" cellspacing="0">
-        <thead>
-        <tr class="FireHead shadow">
-          <th class="text-center align-middle"><img src="{{ url_for('static', filename='fire.png') }}" width="40" alt="Fire"></th>
-          <th class="text-center align-middle><img src="{{ url_for('static', filename='star.png') }}" width="25" alt="Star Level"></th>
-          <th class="text-center align-middle"><img src="{{ url_for('static', filename='awaken.png') }}" width="25" alt="Awaken"></th>
-          <th class="text-center align-middle">WPN</th>
-          <th class="text-center align-middle"><img src="{{ url_for('static', filename='medal.png') }}" width="25" alt="Medals"></th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for i in heroes|sort(attribute='baseStats.name') %}
-        {% if i.baseStats.element == "Fire" and i.baseStats.rarity == "Common" %}
-
-        <!-- FIRE COMMON -->
-        {% include '_heroSetup2.html' %}
-
-        {% endif %}
-        {% endfor %}
-        {% for i in heroes|sort(attribute='baseStats.name') %}
-        {% if i.baseStats.element == "Fire" and i.baseStats.rarity == "Rare" %}
-
-        <!-- FIRE RARE -->
-        {% include '_heroSetup2.html' %}
-
-        {% endif %}
-        {% endfor %}
-        {% for i in heroes|sort(attribute='baseStats.name') %}
-        {% if i.baseStats.element == "Fire" and i.baseStats.rarity == "Epic" %}
-
-        <!-- FIRE EPIC -->
-        {% include '_heroSetup2.html' %}
-
-        {% endif %}
-        {% endfor %}
-
-        </tbody>
-      </table>
-    </div>
-      
-      <!-- EARTH HEROES -->
-           <div class="col-lg-4 pt-3">
-      <table class="table table-borderless table-sm" cellpadding="0" cellspacing="0">
-        <thead>
-        <tr class="EarthHead shadow">
-          <th class="text-center align-middle"><img src="{{ url_for('static', filename='earth.png') }}" width="40" alt="Earth"></th>
-
-          <th class="text-center align-middle"><img src="{{ url_for('static', filename='star.png') }}" width="25" alt="Star Level"></th>
-          <th class="text-center align-middle"><img src="{{ url_for('static', filename='awaken.png') }}" width="25" alt="Awaken"></th>
-          <th class="text-center align-middle">WPN</th>
-          <th class="text-center align-middle"><img src="{{ url_for('static', filename='medal.png') }}" width="25" alt="Medals"></th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for i in heroes|sort(attribute='baseStats.name') %}
-        {% if i.baseStats.element == "Earth" and i.baseStats.rarity == "Common" %}
-
-        <!-- EARTH COMMON -->
-        {% include '_heroSetup2.html' %}
-
-        {% endif %}
-        {% endfor %}
-        {% for i in heroes|sort(attribute='baseStats.name') %}
-        {% if i.baseStats.element == "Earth" and i.baseStats.rarity == "Rare" %}
-
-        <!-- EARTH RARE -->
-        {% include '_heroSetup2.html' %}
-
-        {% endif %}
-        {% endfor %}
-        {% for i in heroes|sort(attribute='baseStats.name') %}
-        {% if i.baseStats.element == "Earth" and i.baseStats.rarity == "Epic" %}
-
-        <!-- EARTH EPIC -->
-        {% include '_heroSetup2.html' %}
-
-        {% endif %}
-        {% endfor %}
-
-        </tbody>
-      </table>
-    </div>
-      
-      
-  </div>
+ </div>
 {% endblock %}
