--- a/app/templates/bossTeam.html
+++ b/app/templates/bossTeam.html
@@ -29,15 +29,15 @@
             </tr>
             </thead>
 <tr>
-                <td>{{ heroes[75].baseStats.name}}</td>
-                <td>{{ heroes[75].atk()}}</td>
-                <td>{{ heroes[75].raidAtk(user.artAtk(heroes[75].baseStats.element), 0)}}</td>
+                <td>{{ heroes[0].baseStats.name}}</td>
+                <td>{{ heroes[0].atk()}}</td>
+                <td>{{ heroes[0].raidAtk(user.artAtk(heroes[0].baseStats.element), 0)}}</td>
 
-                <td>{{ heroes[75].raidAps(user.artAps(), lightBuffs['aps'])}}</td>
+                <td>{{ heroes[0].raidAps(user.artAps(), lightBuffs['aps'])}}</td>
 
-                <td>{{ heroes[75].raidCrit(user.artCrit())}}</td>
+                <td>{{ heroes[0].raidCrit(user.artCrit())}}</td>
 
-                <td>{{ heroes[75].raidCritDmg(user.artCritDmg(heroes[75].baseStats.element), lightBuffs['critDmg'])}}</td>
+                <td>{{ heroes[0].raidCritDmg(user.artCritDmg(heroes[0].baseStats.element), lightBuffs['critDmg'])}}</td>
             </tr>
 
 
@@ -46,17 +46,70 @@
     </div>
 
  </div>
+<div class="row pt-3">
+    <div class="col-lg-12">
+      <h1 class="display-4">Testing</h1>
+        {{ test }}<br>
 
+    </div>
+ </div>
 
  <div class="row pt-3">
     <div class="col-lg-12">
       <h1 class="display-4">Boss Teams</h1>
-        {{ heroList }}<br>
+        {{ heroes }}
+        <hr>
         Water: {{ waterBuffs['atk'] }}<br>
         Fire: {{ fireBuffs }}<br>
         Earth: {{ earthBuffs }}<br>
         Light: {{ lightBuffs }}<br>
         Dark: {{ darkBuffs }}<br>
+    </div>
+ </div>
+
+<div class="row pt-3">
+    <div class="col-lg-6">
+        <table class="table">
+            <thead class="thead-dark">
+            <tr>
+                <th colspan="3" class="text-center">Undead Sam incl. Weakness and Elemental Advantage, buff</th>
+            </tr>
+            <tr>
+                <th>Hero</th>
+                <th colspan="2">DPS</th>
+            </tr>
+            </thead>
+            {% for key, value in user.raidteam(team, teamList, heroes, undeadsam)[0].items() %}
+            <tr>
+                <td>{{ key }}</td><td>{{ value }}</td><td></td>
+            </tr>
+            {% endfor %}
+            <tr>
+                <td>Top:<br></td>
+                <td>Teamlist:<br></td>
+                <td>Heroes:<br></td>
+            </tr>
+        </table>
+
+    </div>
+
+    <div class="col-lg-6">
+        <table class="table">
+            <thead class="thead-dark">
+            <tr>
+                <th colspan="2" class="text-center">Undead Sam incl. Weakness, Elemental Advantage, Buffs</th>
+            </tr>
+            <tr>
+                <th>Hero</th>
+                <th>DPS</th>
+            </tr>
+            </thead>
+            {% for key, value in user.raidteam2(heroes, undeadsam).items() %}
+            <tr>
+                <td>{{ key }}</td><td>{{ value }}</td>
+            </tr>
+            {% endfor %}
+        </table>
     </div>
  </div>
 
