--- a/app/templates/hero.html
+++ b/app/templates/hero.html
@@ -52,7 +52,10 @@
                 -
                 {% endif %}
             </h1>
-            {{ selectedHero.raidAtk(user[0].artAtk(selectedHero.baseStats.element), 0)}}</td>
+                <!--
+            {{ selectedHero.raidAtk(user[0].artAtk(selectedHero.baseStats.element), 0)}}
+            -->
+            </td>
         </tr>
     </table>
       </div>
