--- a/app/templates/bossTeam.html
+++ b/app/templates/bossTeam.html
@@ -12,17 +12,30 @@
  </div>
 
  <div class="row pt-3">
-    <div class="col-lg-12">
+    <div class="col-lg-6">
       <h1 class="display-4">Testing</h1>
-        {{ heroes }}
-        <hr>
-        {{ buffs }}
-        <hr>
-        {{ artBonus }}
+        <table class="table">
+            <thead class="thead-dark">
+            <tr>
+                <th colspan="3" class="text-center">Undead Sam incl. Weakness and Elemental Advantage, Buffs, real team</th>
+            </tr>
+            <tr>
+                <th>Hero</th>
+                <th colspan="2">DPS</th>
+            </tr>
+            </thead>
+            {{ filterTeam }}
+        </table>
     </div>
- </div>
 
-<div class="row pt-3">
+
+<div class="col-lg-6">
+
+
+
+
+
+
     <div class="col-lg-6">
         <table class="table">
             <thead class="thead-dark">
@@ -34,20 +47,12 @@
                 <th colspan="2">DPS</th>
             </tr>
             </thead>
+            {% for key, value in testTeam.items() %}
             <tr>
-                <td>
-                    {{ user.raidteam(team, teamList, heroes, undeadsam, artBonus) }}
-                </td>
+                <td>{{ key }}</td><td>{{ value }}</td><td></td>
             </tr>
+            {% endfor %}
         </table>
-    </div>
-
-
-
-
-
-    <div class="col-lg-6">
-        &nbsp;
     </div>
  </div>
 
