--- a/app/templates/test.html
+++ b/app/templates/test.html
@@ -11,59 +11,31 @@
     </div>
  </div>
 
-<div class="row pt-3">
-    <div class="col-lg-12">
+ <div class="row pt-3">
+    <div class="col-lg-6">
+      <h1 class="display-4">Testing</h1>
         <table class="table">
             <thead class="thead-dark">
-
             <tr>
-                <th>Name</th>
-                <th>Attack</th>
-                <th>Raid Attack</th>
-
-                <th>Raid APS</th>
-
-                <th>Raid Crit</th>
-
-                <th>Raid Crit DMG</th>
+                <th colspan="3" class="text-center">Undead Sam incl. Weakness and Elemental Advantage, Buffs, real team</th>
+            </tr>
+            <tr>
+                <th>Hero</th>
+                <th colspan="2">DPS</th>
             </tr>
             </thead>
-<tr>
-                <td>{{ heroes[0].baseStats.name}}</td>
-                <td>{{ heroes[0].atk()}}</td>
-                <td>{{ heroes[0].raidAtk(user.artAtk(heroes[0].baseStats.element), 0)}}</td>
-
-                <td>{{ heroes[0].raidAps(user.artAps(), buffs["Light"]['aps'])}}</td>
-
-                <td>{{ heroes[0].raidCrit(user.artCrit())}}</td>
-
-                <td>{{ heroes[0].raidCritDmg(user.artCritDmg(heroes[0].baseStats.element), buffs["Light"]['critDmg'])}}</td>
-            </tr>
-
-
-
+            {{ filterTeam }}
         </table>
     </div>
 
- </div>
-<div class="row pt-3">
-    <div class="col-lg-12">
-      <h1 class="display-4">Testing</h1>
-        {{ test }}<br>
 
-    </div>
- </div>
+<div class="col-lg-6">
 
- <div class="row pt-3">
-    <div class="col-lg-12">
-      <h1 class="display-4">Boss Teams</h1>
-        {{ heroes }}
-        <hr>
-        {{ buffs }}
-    </div>
- </div>
 
-<div class="row pt-3">
+
+
+
+
     <div class="col-lg-6">
         <table class="table">
             <thead class="thead-dark">
@@ -75,34 +47,9 @@
                 <th colspan="2">DPS</th>
             </tr>
             </thead>
-            {% for key, value in user.raidteam(team, teamList, heroes, undeadsam)[0].items() %}
+            {% for key, value in testTeam.items() %}
             <tr>
                 <td>{{ key }}</td><td>{{ value }}</td><td></td>
-            </tr>
-            {% endfor %}
-            <tr>
-                <td>Top:<br></td>
-                <td>Teamlist:<br></td>
-                <td>Heroes:<br></td>
-            </tr>
-        </table>
-
-    </div>
-
-    <div class="col-lg-6">
-        <table class="table">
-            <thead class="thead-dark">
-            <tr>
-                <th colspan="2" class="text-center">Undead Sam incl. Weakness, Elemental Advantage, Buffs, all heroes</th>
-            </tr>
-            <tr>
-                <th>Hero</th>
-                <th>DPS</th>
-            </tr>
-            </thead>
-            {% for key, value in user.raidteam2(heroes, undeadsam).items() %}
-            <tr>
-                <td>{{ key }}</td><td>{{ value }}</td>
             </tr>
             {% endfor %}
         </table>
