--- a/app/templates/test.html
+++ b/app/templates/test.html
@@ -6,7 +6,8 @@
     <div class="col-lg-12">
       <h1 class="display-4">Boss Teams</h1>
       <hr>
-      <p class="instructions">These are your optimal damage teams for each boss in the Slay Boss Event.</p>
+      <p class="instructions">These are your optimal damage teams for each boss in the Slay Boss Event.</p><hr>
+        {{ boss }}
       <hr>
     </div>
  </div>
@@ -17,7 +18,7 @@
         <table class="table">
             <thead class="thead-dark">
             <tr>
-                <th colspan="3" class="text-center">Undead Sam incl. Weakness and Elemental Advantage, Buffs, real team</th>
+                <th colspan="3" class="text-center">Kraken</th>
             </tr>
             <tr>
                 <th>Hero</th>
@@ -40,7 +41,7 @@
         <table class="table">
             <thead class="thead-dark">
             <tr>
-                <th colspan="3" class="text-center">Undead Sam incl. Weakness and Elemental Advantage, Buffs, real team</th>
+                <th colspan="3" class="text-center">Kraken</th>
             </tr>
             <tr>
                 <th>Hero</th>
@@ -55,5 +56,7 @@
         </table>
     </div>
  </div>
+
+
 
 {% endblock %}
